--- a/scss/main.css
+++ b/scss/main.css
@@ -443,6 +443,31 @@ header .arrow {
   margin-top: -200px;
 }
 
+.menu__container {
+  width: 100%;
+}
+
+@media screen and (min-width: 1025px) {
+  .menu__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .menu__container section {
+    width: calc(95% / 3);
+  }
+}
+
 @media screen and (min-width: 1025px) {
   .menu {
     width: 80%;
@@ -542,7 +567,7 @@ header .arrow {
 
 @media screen and (min-width: 1025px) {
   .menu .box {
-    width: calc(96% / 3);
+    width: 100%;
   }
 }
 
