--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -157,7 +157,7 @@
 
 .menu--img {
     width: 100%;
-    height: 50vh;
+    height: 487.5px;
     img {
         margin-top: -80px;
         width: 100%;
