--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 
 @import "./components/buttons";
 @import "./components/heart";
+@import "./components/loading";
 
 @import "./layout/footer";
 @import "./layout/header";
